# QingQue

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  main.py  pyproject.toml
.codebuddy/plans/: sprint1-infra-and-skeleton_9a243ad0.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.zcode/plans/: plan-sess_8e9c28ba-c296-4b10-97ea-a1c9f150f404.md
agent/: docker-entrypoint.sh  pyproject.toml
agent/alembic/: script.py.mako
agent/config/: sensitive_words.txt
agent/docs/: architecture.html  grafana-setup-guide.md
agent/proto/: retrieval.proto
agent/scripts/: init_elasticsearch.py  init_milvus.py  init_temporal.py  seed_assist_data.py  seed_knowledge.py  verify_all.py
agent/smartcs/: main.py
agent/tests/: conftest.py  test_activities.py  test_agent.py  test_ai_executor.py  test_ai_executor_dag.py  test_alert_engine.py  test_arbitrator.py  test_assist_agent.py  test_assist_api.py  test_assist_engine.py  test_audit.py  test_audit_health.py  test_auth.py  test_bot_agent_new.py  test_bot_api.py  test_bot_memory.py  test_bot_streams_worker.py  test_chunker.py  test_circuit_breaker.py  test_classifier.py  test_config_extensions.py  test_decision.py  test_degradation.py  test_faq_router.py  test_faq_service.py  test_feedback_api.py  test_integration.py  test_kb_delete.py  test_knowledge_graph.py  test_llm.py  test_marketing_executor.py  test_metrics.py  test_middleware.py  test_oe_pipeline.py  test_orchestration_comprehensive.py  test_orm_models.py  test_pii.py  test_product_catalog.py  test_queue_merge.py  test_rate_limit.py  (+15 more)
alembic/: env.py
config/: prometheus.yml  sensitive_words.txt  transfer_keywords.txt
config/grafana/: smartcs-dashboard.json
deploy/: .dockerignore  Dockerfile  docker-compose.demo.yml  docker-compose.yml  docker-entrypoint.sh
deploy/elasticsearch/: Dockerfile
deploy/higress/: README.md
deploy/k8s/: smartcs.yaml
deploy/nginx/: nginx.conf
docs/: README.md  api-reference.md  architecture.md  configuration.md  deployment.md  development.md  session-state-machine.html  user-stories-and-flows.html  user-stories-and-flows.md
docs/blog/: introducing-smartcs.md  promotion-kit.md
docs/plans/: 2026-04-30-sprint2-data-preparation.md
docs/superpowers/: test-architecture.drawio
knowledge-platform/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
knowledge-platform/.github/workflows/: ci.yml
knowledge-platform/alembic/: env.py
knowledge-platform/alembic/versions/: 0001_initial.py
knowledge-platform/app/: __init__.py  config.py  database.py  logging.py  main.py  utils.py
knowledge-platform/app/api/: deps.py  documents.py  retrieve.py
knowledge-platform/app/eval/: __init__.py  ragas_eval.py
knowledge-platform/app/middleware/: __init__.py  health.py  prometheus.py  rate_limit.py
knowledge-platform/app/orm/: __init__.py  base.py  kb.py
knowledge-platform/app/pipeline/: __init__.py  chunker.py  cleaner.py  embedder.py  extractor.py  orchestrator.py  parser.py  writer.py
knowledge-platform/app/retrieval/: __init__.py  engine.py  models.py  reranker.py
knowledge-platform/app/security/: __init__.py  audit.py  auth.py  sensitive_filter.py
knowledge-platform/app/storage/: __init__.py  elasticsearch.py  kafka.py  minio.py  redis.py
knowledge-platform/app/worker/: consumer.py
knowledge-platform/deploy/k8s/: api-deployment.yaml  worker-deployment.yaml
knowledge-platform/scripts/: init_database.py  init_elasticsearch.py  seed_knowledge.py
knowledge-platform/tests/: test_chunker.py  test_cleaner.py  test_config.py  test_integration.py  test_orm.py  test_retrieval.py  test_sensitive_filter.py
proto/: classification.proto  safety.proto
scripts/: demo_recording.sh  generate_grpc.py  init_elasticsearch.py  init_kafka.py  init_milvus.py  init_minio.py  locustfile.py  seed_knowledge.py  verify_all.py  verify_ollama.py
src/smartcs/: __init__.py  main.py
star-connection/: CLAUDE.md  DESIGN.md  Makefile  README.md  generate-word-doc.sh  pom.xml  start-all.sh  stop-all.sh  test-simple.sh
star-connection/agent-server/: pom.xml
star-connection/common/: pom.xml
star-connection/customer-server/: pom.xml
star-connection/deploy/: DEPLOYMENT.md  test-cors.sh
star-connection/design/: create_dashboard.py  monitor-design-philosophy.md
star-connection/transport/: pom.xml
test_data/: eval_qa_pairs.jsonl
test_data/activity/: activity-new-year-promotion.md  activity-summer-promotion.md
test_data/annual_fee/: annual-fee-hard-waiver.md
test_data/faq/: faq-bill.md  faq-loss-report.md
test_data/fee/: fee-annual-card-type.md  (+1 more)
tests/: test_assist_agent.py  test_assist_api.py  test_bot_api.py  test_chat_poll.py  test_chunker.py  test_degradation.py  test_embedding.py  test_ingestion.py  test_llm.py  test_orm_models.py  test_retrieval.py  test_script_service.py  test_transfer.py
web/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+320 files in other folders)
