[tool.poetry]
name = "knowledge-platform"
version = "0.1.0"
description = "银行知识数据平台 — 离线ETL管线 + 在线混合检索API"
authors = ["Knowledge Platform Team"]
package-mode = false
packages = [{ include = "app", from = "." }]

[tool.poetry.scripts]
kp-api = "app.main:main"
kp-worker = "app.worker.consumer:main"

[tool.poetry.dependencies]
python = "^3.11"

# Web 框架
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-multipart = "^0.0.27"

# 数据库
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
psycopg2-binary = "^2.9"
alembic = "^1.18"

# 缓存
redis = { extras = ["hiredis"], version = "^5.0" }

# 检索引擎 (BM25 + kNN 原生 RRF)
elasticsearch = { extras = ["async"], version = "^8.19" }

# 对象存储
minio = "^7.2"

# 消息队列
aiokafka = "^0.10"

# 大模型 (LLM 抽取 + 嵌入)
openai = "^1.30"
httpx = "^0.27"

# 文档解析 — docling 版式感知 (首选) + pymupdf/python-docx (回退)
docling = "^2.5"
pymupdf = "^1.24"
python-docx = "^1.1"
markdown-it-py = "^3.0"
beautifulsoup4 = "^4.12"
lxml = "^5.0"
openpyxl = "^3.1"

# 重试
tenacity = "^8.2"

# YAML
pyyaml = "^6.0"

# 结构化日志
structlog = "^24.4"

# LLM 可观测性 (Langfuse — 抽取成本/延迟/质量追踪)
langfuse = "^2.0"

# UUID
uuid-utils = "^0.10"

# 可观测性
opentelemetry-api = "^1.20"
opentelemetry-sdk = "^1.20"
prometheus-client = "^0.20"

# AC 自动机 (敏感词/合规匹配)
pyahocorasick = ">=2.0"

# 认证
pyjwt = ">=2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.8"
mypy = "^1.13"
pre-commit = "^4.0"
coverage = "^7.6"
ragas = "^0.2"
datasets = "^2.0"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests requiring LLM inference or external services",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
